# mc_rtc

./: .clang-format  .clang-format-check.sh  .clang-format-common.sh  .clang-format-fix.sh  .cmake-format.py  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .mc-rtc-ros.recipe  .mc-rtc.recipe  .mergify.yml  .nvim.lua  .pre-commit  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  _config.yml  credits.html  doxygen.html  flake.nix  idl.cmake  index.html  interfaces.html  json-full.html  json.html  robots.html  sitemap.xml  tutorials.html
CMakeModules/: CMakeLists.txt  Findmc_rtc_3rd_party_eigen-fmt.cmake  Findmc_rtc_3rd_party_geos.cmake  Findmc_rtc_3rd_party_hpp-spline.cmake  Findmc_rtc_3rd_party_libnotify.cmake  Findmc_rtc_3rd_party_ltdl.cmake  Findmc_rtc_3rd_party_nanomsg.cmake  Findmc_rtc_3rd_party_ndcurves.cmake  Findmc_rtc_3rd_party_ros.cmake  ListAllFiles.cmake  MakeVersionHeader.cmake
benchmarks/: CMakeLists.txt  benchAllocTasks.cpp  benchAllocTasks.in.cpp  benchCompletionCriteria.cpp  benchHMC.cpp  benchRobotLoading.in.cpp  benchSimulationContactSensor.in.cpp  config.yaml  config_lipm.yaml
binding/: CMakeLists.txt
binding/nanobind/: CMakeLists.txt  README.md  __init__.py  __init__stub.conf.py  pyproject.toml
binding/python/: CMakeLists.txt  README.md  setup.in.py
doc/: .gitignore  CMakeLists.txt  Doxyfile.extra.in  Gemfile  README.md  _config.yml  credits.html  doxygen.html  index.html  interfaces.html  json.html  robots.html  setup-local-assets.sh  tutorials.html
doc/_data/: carousel.yml  features.yml  interfaces.yml  json_categories.yml  links.yml  nav.yml  robots.yml  tutorials.yml
doc/_i18n/: en.yml  jp.yml
doc/_includes/: clipboard-js.html  footer-common.html  h2.html  h3.html  h4.html  h5.html  h6.html  head-common.html  header-common.html  index-carousel.html  index-features.html  interfaces_display.html  json_schema.html  json_schema_array.html  json_schema_category_description.html  json_schema_item.html  json_schema_object.html  json_schema_object_property.html  json_schema_with_examples.html  link_tutorial.html  mc_rtc_configuration_row.html  robots_display.html  show_source.html  show_sources.html  tutorials_display.html
doc/_layouts/: default.html  json.html  json_schema.html  tutorials.html
doc/_plugins/: README.md  data_page_generator.in.rb  data_page_generator.rb  doxygen.rb.in  include_raw.rb  link.rb  pretty_json.rb
doc/css/: mc_rtc.css
doc/json/: CMakeLists.txt  index.html
idl/: CMakeLists.txt  MCControlService.idl  MCLog.fbs
plugins/: .gitignore  CMakeLists.txt
plugins/ROS/: CMakeLists.txt  ROS.cpp  ROS.h
plugins/Replay/: CMakeLists.txt
samples/: CMakeLists.txt
samples/CoMGenerator/: CMakeLists.txt  mc_sample_CoMGeneration.in.cpp
samples/CoMTrajectoryGeneration/: CMakeLists.txt
src/: CMakeLists.txt  MCControl.cpp  MCControl.h  MCControlComp.cpp  MCControlService.hh  MCControlServiceSK.cc  MCControlServiceSVC_impl.cpp  MCControlServiceSVC_impl.h  mc_rtc.lds  mc_rtcMacros.cmake  mc_rtcMacros.in.cmake  version-script.lds
src/mc_control/: CMakeLists.txt  CompletionCriteria.cpp  Configuration.cpp  ControllerClient.cpp  ControllerLoader.cpp  ControllerServer.cpp  ControllerServerConfiguration.cpp  ForceContactSensor.cpp  GlobalPluginLoader.cpp  Logger.cpp  MCController.cpp  MCSeqPublisher.cpp  MCSeqPublisher.h  SimulationContactPair.cpp  SimulationContactSensor.cpp  Ticker.cpp  generic_gripper.cpp  mc_bci_self_interact_controller.cpp  mc_bci_self_interact_controller.h  mc_body6d_controller.cpp  mc_com_controller.cpp  mc_com_controller.h  mc_completion_criteria.cpp  mc_controller.cpp  mc_drc_controller.cpp  mc_drc_controller_services.cpp  mc_driving_controller.cpp  mc_driving_controller.h  mc_egress_controller.cpp  mc_egress_controller.h  mc_egress_mrqp_controller.cpp  mc_egress_mrqp_controller.h  mc_egress_phases.cpp  mc_fsm_controller.cpp  mc_fsm_state_factory.cpp  mc_global_controller.cpp  mc_global_controller_configuration.cpp  mc_global_controller_gui.cpp  mc_global_controller_logger.cpp  mc_global_controller_ros_services.cpp  (+14 more)
src/mc_observers/: BodySensorObserver.cpp  (+19 more)
tests/: CMakeLists.txt  LoggerTraits.cpp  dummyClient.cpp  dummyServer.cpp  gui_AdvancedForm.cpp  gui_SampleClient.cpp  gui_SampleServer.cpp  gui_Schema.cpp  gui_TestServer.h  samples_Schema.h  testBSplineTrajectory.cpp  testCanonicalRobot.cpp  testCompletionCriteria.cpp  testCompletionCriteria.in.cpp  testConfiguration.cpp  testConfigurationHelpers.cpp  testConstraintImplementation.cpp  testConstraintSetLoader.cpp  testDataStore.cpp  testFSMStateFactory.in.cpp  testFSMStateFactoryConfig.in.h  testGUIStateBuilder.cpp  testJsonIO.cpp  testLogUtils.cpp  testLogger.cpp  testMetaTaskLoader.cpp  testNotify.cpp  testQuadraticGenerator.cpp  testRobotModule.cpp  testRobotModule_visual.cpp  testSchema.cpp  testSchemaExamples.in.cpp  testSignal.cpp  testSimulationContactPair.cpp  testSimulationContactPair.in.cpp  testSolverBackend.cpp  testSolverTaskStorage.cpp  test_controller_restart.cpp  test_controller_ticker.cpp  test_filters.cpp  (+16 more)
utils/: CMakeLists.txt  RobotVisualizer.cpp  RobotVisualizer.h  autocompletion.bash  autocompletion.zsh  build_and_install.sh  build_and_install_default_config.sh  build_and_install_user_config.sample.sh  config_build_and_install.bionic.sh  config_build_and_install.buster.sh  config_build_and_install.focal.sh  config_build_and_install.jammy.sh  config_build_and_install.macos.sh  config_build_and_install.trusty.sh  config_build_and_install.windows.sh  config_build_and_install.xenial.sh  gui_plot_mc_data.py  mc_bin_compare.cpp  mc_bin_perf.cpp  mc_bin_to_flat.cpp  mc_bin_to_flat.h  mc_bin_to_flat_main.cpp  mc_bin_to_log.cpp  mc_bin_to_log.h  mc_bin_to_log_main.cpp  mc_bin_to_rosbag.cpp  mc_bin_to_rosbag.h  mc_bin_to_rosbag_main.cpp  mc_bin_utils.cpp  mc_bin_utils.h  mc_bin_utils.in.cpp  mc_convex_visualization.cpp  mc_json_to_yaml.cpp  mc_old_bin_to_flat.cpp  mc_robot_visualization.cpp  mc_rtc_new_controller  mc_rtc_new_controller.in.py  mc_rtc_new_fsm_controller  mc_rtc_new_fsm_controller.in.py  mc_rtc_ticker.cpp  (+4 more)
(+17307 files in other folders)
