SET(IDLS "MCControlService")

FOREACH(IDL ${IDLS})
	GENERATE_IDL_CPP(${IDL} ${CMAKE_SOURCE_DIR}/idl)
	GENERATE_IDL_PYTHON(${IDL} ${CMAKE_SOURCE_DIR}/idl)
ENDFOREACH()

MESSAGE("${ALL_IDL_CPP_STUBS}")
ADD_CUSTOM_TARGET(generate_mc_idl_cpp DEPENDS ${ALL_IDL_CPP_STUBS})
ADD_CUSTOM_TARGET(generate_mc_idl_python DEPENDS ${ALL_IDL_CPP_STUBS})

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/idl)

#TODO : INSTALL PYTHON IDL

FOREACH(IDL ${IDLS})
	INSTALL(FILES ${IDL}.idl DESTINATION share/hrpsys/idl)
ENDFOREACH()
